--- a/.containers/config.env
+++ b/.containers/config.env
@@ -8,13 +8,10 @@ REG_URL   ?= https://$(REG_HOST)
 APP_NAME     = juggler
 REPO_NAME    = juggler
 
-DH_ORG       = argonneeic
-
 GL_GROUP     = eic
 GL_REG_GROUP = eic/juggler
 GL_REG_NAME  = $(REG_NAME)
 
+PUBLISH_TAG = $(JUGGLER_TAG)
 
-
-
-
+REG_API_URL = $(REG_URL)/api/v4/projects/$(CI_PROJECT_ID)/registry/repositories/50/tags
