Upgrade to ACTS version 4.1.0
- A lot has changed since 1.0
- The source link is simplified and has a corresponding measurement
class now
- Copied Bfield and utilties from acts examples
- Currently it only compiles. Need to check reconstruction.

It Builds with acts 4.1.0

	modified:   GeoSvc.cpp
	modified:   GeoSvc.h

--- a/JugBase/CMakeLists.txt
+++ b/JugBase/CMakeLists.txt
@@ -21,6 +21,10 @@ gaudi_depends_on_subdirs(GaudiAlg GaudiKernel)
 
 gaudi_add_library(JugBase
   src/*.cpp 
+  src/Utilities/*.cpp
+  src/Plugins/BFieldOptions.cpp  
+  #src/Plugins/BFieldScalor.cpp  
+  src/Plugins/BFieldUtils.cpp
                   INCLUDE_DIRS EICD PODIO ROOT $ENV{HOME}/stow/podio/include
                   LINK_LIBRARIES GaudiAlgLib GaudiKernel ROOT DD4hep::DDG4IO
                   PUBLIC_HEADERS JugBase)
