--- a/.containers/Dockerfile.in
+++ b/.containers/Dockerfile.in
@@ -8,6 +8,7 @@ LABEL maintainer="Whitney Armstrong <warmstrong@anl.gov>" \
       base="eic_container/eic"
 
 RUN cd /tmp             \
+      && export CLICOLOR_FORCE=1 \
       && git clone  https://eicweb.phy.anl.gov/EIC/NPDet.git \
       && mkdir -p NPDet/build && cd NPDet/build \
       && cmake ../. -DCMAKE_CXX_STANDARD=17 -DCMAKE_INSTALL_PREFIX=/usr/local \
@@ -15,6 +16,7 @@ RUN cd /tmp             \
       && cd /tmp && rm -rf /tmp/NPDet 
 
 RUN cd /tmp             \
+      && export CLICOLOR_FORCE=1 \
       && git clone  https://eicweb.phy.anl.gov/EIC/eicd.git \
       && mkdir -p eicd/build && cd eicd/build \
       && cmake ../. -DCMAKE_CXX_STANDARD=17 -DCMAKE_INSTALL_PREFIX=/usr/local \
@@ -22,6 +24,7 @@ RUN cd /tmp             \
       && cd /tmp && rm -rf /tmp/eicd 
 
 RUN cd /tmp             \
+      && export CLICOLOR_FORCE=1 \
       && git clone  -b @JUGGLER_BRANCH@ https://eicweb.phy.anl.gov/EIC/juggler.git \
       && mkdir -p juggler/build && cd juggler/build \
       && cmake ../. -DCMAKE_CXX_STANDARD=17 -DCMAKE_INSTALL_PREFIX=/usr/local \
