--- a/.containers/Dockerfile.in
+++ b/.containers/Dockerfile.in
@@ -17,7 +17,7 @@ RUN cd /tmp             \
 
 RUN cd /tmp             \
       && export CLICOLOR_FORCE=1 \
-      && git clone  https://eicweb.phy.anl.gov/EIC/eicd.git \
+      && git clone -b @EIC_DATA_MODEL_VERSION@ https://eicweb.phy.anl.gov/EIC/eicd.git \
       && mkdir -p eicd/build && cd eicd/build \
       && cmake ../. -DCMAKE_CXX_STANDARD=17 -DCMAKE_INSTALL_PREFIX=/usr/local \
       && make -j30  && make -j4 install \
