--- a/.containers/Makefile
+++ b/.containers/Makefile
@@ -24,10 +24,10 @@ help: ## This help.
 # ==========================================================================
 #
 build: ## build the image
-	docker build -t $(APP_NAME):$(LONG_TAG) .
+	DOCKER_BUILDKIT=1 docker build -t $(APP_NAME):$(LONG_TAG) .
 
 build-nc: ## Build the container without caching (from scratch)
-	docker build --no-cache -t $(APP_NAME):$(LONG_TAG) .
+	DOCKER_BUILDKIT=1 docker build --no-cache -t $(APP_NAME):$(LONG_TAG) .
 
 # ==========================================================================
 #
