--- a/.containers/Dockerfile.in
+++ b/.containers/Dockerfile.in
@@ -1,3 +1,5 @@
+#syntax=docker/dockerfile:1.2
+
 FROM  eicweb.phy.anl.gov:4567/containers/eic_container/eic:@EIC_TAG@
 
 LABEL maintainer="Whitney Armstrong <warmstrong@anl.gov>" \
@@ -6,11 +8,6 @@ LABEL maintainer="Whitney Armstrong <warmstrong@anl.gov>" \
       march="native" \
       basedist="debian" \
       base="eic_container/eic"
-
-## fix for latest dd4hep cmake file that is somehow unable to find python...
-## just removing the find_package call fixes the issue
-## FIXME
-RUN sed -i "s/FIND_PACKAGE(Python/#&/" /usr/local/cmake/DD4hepBuild.cmake
 
 RUN cd /tmp             \
       && export CLICOLOR_FORCE=1 \
