Resolve "Implement 3D Clustering Algorithm for Sampling Calorimeter"

--- a/JugReco/CMakeLists.txt
+++ b/JugReco/CMakeLists.txt
@@ -53,6 +53,8 @@ gaudi_add_module(JugRecoPlugins
   src/components/FuzzyKClusters.cpp 
   src/components/EMCalReconstruction.cpp 
   src/components/SamplingECalHitsMerger.cpp 
+  src/components/TopologicalCellCluster.cpp 
+  src/components/ImagingClusterReco.cpp 
   LINK_LIBRARIES GaudiAlgLib GaudiKernel JugBase ROOT NPDet::DD4podIO EICD::eicd DDRec Acts)
 
 target_compile_options(JugRecoPlugins PRIVATE -Wno-suggest-override)
