--- a/.containers/Dockerfile.in
+++ b/.containers/Dockerfile.in
@@ -9,6 +9,10 @@ LABEL maintainer="Whitney Armstrong <warmstrong@anl.gov>" \
       basedist="debian" \
       base="eic_container/eic"
 
+RUN cd /tmp \
+     && curl -LJO "https://gitlab-runner-downloads.s3.amazonaws.com/latest/deb/gitlab-runner_amd64.deb"  \
+     && dpkg -i gitlab-runner_amd64.deb
+
 RUN cd /tmp             \
       && export CLICOLOR_FORCE=1 \
       && git clone  https://eicweb.phy.anl.gov/EIC/NPDet.git \
