modified:   .containers/Dockerfile.in

--- a/.containers/Dockerfile.in
+++ b/.containers/Dockerfile.in
@@ -11,7 +11,9 @@ LABEL maintainer="Whitney Armstrong <warmstrong@anl.gov>" \
 
 RUN cd /tmp \
      && curl -LJO "https://gitlab-runner-downloads.s3.amazonaws.com/latest/deb/gitlab-runner_amd64.deb"  \
-     && dpkg -i gitlab-runner_amd64.deb
+     && dpkg -i gitlab-runner_amd64.deb \
+     && pip install tensorflow
+
 
 RUN cd /tmp             \
       && export CLICOLOR_FORCE=1 \
