modified:   .containers/Dockerfile.in

--- a/.containers/Dockerfile.in
+++ b/.containers/Dockerfile.in
@@ -12,6 +12,7 @@ LABEL maintainer="Whitney Armstrong <warmstrong@anl.gov>" \
 RUN cd /tmp \
      && curl -LJO "https://gitlab-runner-downloads.s3.amazonaws.com/latest/deb/gitlab-runner_amd64.deb"  \
      && dpkg -i gitlab-runner_amd64.deb \
+     && pip install --upgrade pip \
      && pip install tensorflow
 
 
